add C64 to webpage

--- a/web/_includes/systems-panel.html
+++ b/web/_includes/systems-panel.html
@@ -17,6 +17,7 @@
             <li class="panel-list-item amstrad" onclick="boot_system(this,'cpc464','none')">CPC 464</li>
             <li class="panel-list-item amstrad" onclick="boot_system(this,'cpc6128','none')">CPC 6128</li>
             <li class="panel-list-item acorn" onclick="boot_system(this,'acorn_atom','none')">Acorn Atom</li>
+            <li class="panel-list-item cbm" onclick="boot_system(this, 'c64_pal','none')">C64</li>
         </ul>
     </div>
 </div>
