--- a/web/css/emu.scss
+++ b/web/css/emu.scss
@@ -33,6 +33,7 @@ $robotron-riesa-color: #00C853;
 $sinclair-color: #0097A7;
 $amstrad-color: #E91E63;
 $acorn-color: #388E3C; 
+$cbm-color: #6C5EB5;
 
 @import
     "emu/base",
